<resources>
    <string name="app_name">荣福</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="input_username">请输入邮箱</string>
    <string name="input_service_url">请输入服务器地址</string>
    <string name="input_enterprise_name">请输入企业名</string>
    <string name="username">用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="password">密码</string>

    <string name="add">提交</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="enter">确定</string>

    <string name="home">首页</string>
    <string name="user">个人中心</string>
    <string name="gfhb">休闲娱乐</string>

    <string name="log">日志</string>
    <string name="today_log">今日日志</string>


    <string name="send_code">发送验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="username_password_login">账号密码登录</string>
    <string name="username_code_login">验证码登录</string>
    <string name="setting">设置</string>
    <string name="next">下一步</string>
    <string name="enterprise">企业</string>
    <string name="staff">员工</string>
    <string name="other">其他</string>

    <string name="sign_in">签到</string>

    <string name="network_status">网络异常</string>
    <string name="city_code">
        北京:101010100朝阳:101010300顺义:101010400怀柔:101010500通州:101010600昌平:101010700延庆:101010800丰台:101010900石景山:101011000大兴:101011100房山:101011200密云:101011300门头沟:101011400平谷:101011500八达岭:101011600佛爷顶:101011700汤河口:101011800密云上甸子:101011900斋堂:101012000霞云岭:101012100北京城区:101012200海淀:101010200天津:101030100宝坻:101030300东丽:101030400西青:101030500北辰:101030600蓟县:101031400汉沽:101030800静海:101030900津南:101031000塘沽:101031100大港:101031200武清:101030200宁河:101030700上海:101020100宝山:101020300嘉定:101020500南汇:101020600浦东:101021300青浦:101020800松江:101020900奉贤:101021000崇明:101021100徐家汇:101021200闵行:101020200金山:101020700石家庄:101090101张家口:101090301承德:101090402唐山:101090501秦皇岛:101091101沧州:101090701衡水:101090801邢台:101090901邯郸:101091001保定:101090201廊坊:101090601郑州:101180101新乡:101180301许昌:101180401平顶山:101180501信阳:101180601南阳:101180701开封:101180801洛阳:101180901商丘:101181001焦作:101181101鹤壁:101181201濮阳:101181301周口:101181401漯河:101181501驻马店:101181601三门峡:101181701济源:101181801安阳:101180201合肥:101220101芜湖:101220301淮南:101220401马鞍山:101220501安庆:101220601宿州:101220701阜阳:101220801亳州:101220901黄山:101221001滁州:101221101淮北:101221201铜陵:101221301宣城:101221401六安:101221501巢湖:101221601池州:101221701蚌埠:101220201杭州:101210101舟山:101211101湖州:101210201嘉兴:101210301金华:101210901绍兴:101210501台州:101210601温州:101210701丽水:101210801衢州:101211001宁波:101210401重庆:101040100合川:101040300南川:101040400江津:101040500万盛:101040600渝北:101040700北碚:101040800巴南:101040900长寿:101041000黔江:101041100万州天城:101041200万州龙宝:101041300涪陵:101041400开县:101041500城口:101041600云阳:101041700巫溪:101041800奉节:101041900巫山:101042000潼南:101042100垫江:101042200梁平:101042300忠县:101042400石柱:101042500大足:101042600荣昌:101042700铜梁:101042800璧山:101042900丰都:101043000武隆:101043100彭水:101043200綦江:101043300酉阳:101043400秀山:101043600沙坪坝:101043700永川:101040200福州:101230101泉州:101230501漳州:101230601龙岩:101230701晋江:101230509南平:101230901厦门:101230201宁德:101230301莆田:101230401三明:101230801兰州:101160101平凉:101160301庆阳:101160401武威:101160501金昌:101160601嘉峪关:101161401酒泉:101160801天水:101160901武都:101161001临夏:101161101合作:101161201白银:101161301定西:101160201张掖:101160701广州:101280101惠州:101280301梅州:101280401汕头:101280501深圳:101280601珠海:101280701佛山:101280800肇庆:101280901湛江:101281001江门:101281101河源:101281201清远:101281301云浮:101281401潮州:101281501东莞:101281601中山:101281701阳江:101281801揭阳:101281901茂名:101282001汕尾:101282101韶关:101280201南宁:101300101柳州:101300301来宾:101300401桂林:101300501梧州:101300601防城港:101301401贵港:101300801玉林:101300901百色:101301001钦州:101301101河池:101301201北海:101301301崇左:101300201贺州:101300701贵阳:101260101安顺:101260301都匀:101260401兴义:101260906铜仁:101260601毕节:101260701六盘水:101260801遵义:101260201凯里:101260501昆明:101290101红河:101290301文山:101290601玉溪:101290701楚雄:101290801普洱:101290901昭通:101291001临沧:101291101怒江:101291201香格里拉:101291301丽江:101291401德宏:101291501景洪:101291601大理:101290201曲靖:101290401保山:101290501呼和浩特:101080101乌海:101080301集宁:101080401通辽:101080501阿拉善左旗:101081201鄂尔多斯:101080701临河:101080801锡林浩特:101080901呼伦贝尔:101081000乌兰浩特:101081101包头:101080201赤峰:101080601南昌:101240101上饶:101240301抚州:101240401宜春:101240501鹰潭:101241101赣州:101240701景德镇:101240801萍乡:101240901新余:101241001九江:101240201吉安:101240601武汉:101200101黄冈:101200501荆州:101200801宜昌:101200901恩施:101201001十堰:101201101神农架:101201201随州:101201301荆门:101201401天门:101201501仙桃:101201601潜江:101201701襄樊:101200201鄂州:101200301孝感:101200401黄石:101200601咸宁:101200701成都:101270101自贡:101270301绵阳:101270401南充:101270501达州:101270601遂宁:101270701广安:101270801巴中:101270901泸州:101271001宜宾:101271101内江:101271201资阳:101271301乐山:101271401眉山:101271501凉山:101271601雅安:101271701甘孜:101271801阿坝:101271901德阳:101272001广元:101272101攀枝花:101270201银川:101170101中卫:101170501固原:101170401石嘴山:101170201吴忠:101170301西宁:101150101黄南:101150301海北:101150801果洛:101150501玉树:101150601海西:101150701海东:101150201海南:101150401济南:101120101潍坊:101120601临沂:101120901菏泽:101121001滨州:101121101东营:101121201威海:101121301枣庄:101121401日照:101121501莱芜:101121601聊城:101121701青岛:101120201淄博:101120301德州:101120401烟台:101120501济宁:101120701泰安:101120801西安:101110101延安:101110300榆林:101110401铜川:101111001商洛:101110601安康:101110701汉中:101110801宝鸡:101110901咸阳:101110200渭南:101110501太原:101100101临汾:101100701运城:101100801朔州:101100901忻州:101101001长治:101100501大同:101100201阳泉:101100301晋中:101100401晋城:101100601吕梁:101101100乌鲁木齐:101130101石河子:101130301昌吉:101130401吐鲁番:101130501库尔勒:101130601阿拉尔:101130701阿克苏:101130801喀什:101130901伊宁:101131001塔城:101131101哈密:101131201和田:101131301阿勒泰:101131401阿图什:101131501博乐:101131601克拉玛依:101130201拉萨:101140101山南:101140301阿里:101140701昌都:101140501那曲:101140601日喀则:101140201林芝:101140401台北县:101340101高雄:101340201台中:101340401海口:101310101三亚:101310201东方:101310202临高:101310203澄迈:101310204儋州:101310205昌江:101310206白沙:101310207琼中:101310208定安:101310209屯昌:101310210琼海:101310211文昌:101310212保亭:101310214万宁:101310215陵水:101310216西沙:101310217南沙岛:101310220乐东:101310221五指山:101310222琼山:101310102长沙:101250101株洲:101250301衡阳:101250401郴州:101250501常德:101250601益阳:101250700娄底:101250801邵阳:101250901岳阳:101251001张家界:101251101怀化:101251201黔阳:101251301永州:101251401吉首:101251501湘潭:101250201南京:101190101镇江:101190301苏州:101190401南通:101190501扬州:101190601宿迁:101191301徐州:101190801淮安:101190901连云港:101191001常州:101191101泰州:101191201无锡:101190201盐城:101190701哈尔滨:101050101牡丹江:101050301佳木斯:101050401绥化:101050501黑河:101050601双鸭山:101051301伊春:101050801大庆:101050901七台河:101051002鸡西:101051101鹤岗:101051201齐齐哈尔:101050201大兴安岭:101050701长春:101060101延吉:101060301四平:101060401白山:101060901白城:101060601辽源:101060701松原:101060801吉林:101060201通化:101060501沈阳:101070101鞍山:101070301抚顺:101070401本溪:101070501丹东:101070601葫芦岛:101071401营口:101070801阜新:101070901辽阳:101071001铁岭:101071101朝阳:101071201盘锦:101071301大连:101070201锦州:101070701

    </string>
    <string name="all_citys">
        北京%北京
天津%天津
河北省%石家庄%唐山%秦皇岛%邯郸%邢台%保定%张家口%承德%沧州%廊坊%衡水
山西省%太原%大同%阳泉%长治%晋城%朔州%晋中%运城%忻州%临汾%吕梁
内蒙古自治区%呼和浩特%包头%乌海%赤峰%通辽%鄂尔多斯%呼伦贝尔%巴彦淖尔%乌兰察布%兴安%锡林郭勒%阿拉善
辽宁省%沈阳%大连%鞍山%抚顺%本溪%丹东%锦州%营口%阜新%辽阳%盘锦%铁岭%朝阳%葫芦岛
吉林省%长春%吉林%四平%辽源%通化%白山%松原%白城%延边朝鲜族
黑龙江省%哈尔滨%齐齐哈尔%鸡西%鹤岗%双鸭山%大庆%伊春%佳木斯%七台河%牡丹江%黑河%绥化%大兴安岭
上海%上海
江苏省%南京%无锡%徐州%常州%苏州%南通%连云港%淮安%盐城%扬州%镇江%泰州%宿迁
浙江省%杭州%宁波%温州%嘉兴%湖州%绍兴%金华%衢州%舟山%台州%丽水
安徽省%合肥%芜湖%蚌埠%淮南%马鞍山%淮北%铜陵%安庆%黄山%滁州%阜阳%宿州%六安%亳州%池州%宣城
福建省%福州%厦门%莆田%三明%泉州%漳州%南平%龙岩%宁德
江西省%南昌%景德镇%萍乡%九江%新余%鹰潭%赣州%吉安%宜春%抚州%上饶
山东省%济南%青岛%淄博%枣庄%东营%烟台%潍坊%济宁%泰安%威海%日照%莱芜%临沂%德州%聊城%滨州%菏泽
河南省%郑州%开封%洛阳%平顶山%安阳%鹤壁%新乡%焦作%济源%濮阳%许昌%漯河%三门峡%南阳%商丘%信阳%周口%驻马店
湖北省%武汉%黄石%十堰%宜昌%襄阳%鄂州%荆门%孝感%荆州%黄冈%咸宁%随州%恩施%仙桃%潜江%天门%神农架
湖南省%长沙%株洲%湘潭%衡阳%邵阳%岳阳%常德%张家界%益阳%郴州%永州%怀化%娄底%湘西
广东省%广州%韶关%深圳%珠海%汕头%佛山%江门%湛江%茂名%肇庆%惠州%梅州%汕尾%河源%阳江%清远%东莞%中山%东沙%潮州%揭阳%云浮
广西壮族自治区%南宁%柳州%桂林%梧州%北海%防城港%钦州%贵港%玉林%百色%贺州%河池%来宾%崇左
海南省%临高%海口%三亚%三沙%五指山%琼海%儋州%文昌%万宁%东方%定安%屯昌%澄迈%白沙%昌江%乐东%陵水%保亭%琼中
重庆%重庆
四川省%成都%自贡%攀枝花%泸州%德阳%绵阳%广元%遂宁%内江%乐山%南充%眉山%宜宾%广安%达州%雅安%巴中%资阳%阿坝%甘孜%凉山
贵州省%贵阳%六盘水%遵义%安顺%铜仁%黔西南%毕节%黔东南%黔南
云南省%昆明%曲靖%玉溪%保山%昭通%丽江%普洱%临沧%楚雄%红河%文山%西双版纳%大理%德宏%怒江%迪庆
西藏自治区%拉萨%昌都%山南%日喀则%那曲%阿里%林芝
陕西省%西安%铜川%宝鸡%咸阳%渭南%延安%汉中%榆林%安康%商洛
甘肃省%兰州%嘉峪关%金昌%白银%天水%武威%张掖%平凉%酒泉%庆阳%定西%陇南%临夏%甘南
青海省%西宁%海东%海北%黄南%海南藏族%果洛%玉树%海西
宁夏回族自治区%银川%石嘴山%吴忠%固原%中卫
新疆维吾尔自治区%乌鲁木齐%克拉玛依%吐鲁番%哈密%昌吉%博尔塔拉%巴音郭楞%阿克苏%克孜勒苏柯尔克孜%喀什%和田%伊犁%塔城%阿勒泰%石河子%阿拉尔%图木舒克%五家渠
台湾%台北%高雄%台南%台中%金门%南投%基隆%新竹%嘉义%新北%宜兰%新竹%桃园%苗栗%彰化%嘉义%云林%屏东%台东%花莲%澎湖%连江
香港特别行政区%香港岛%九龙%新界
澳门特别行政区%澳门半岛%离岛
    </string>
</resources>
