<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/gray"
            android:textSize="38sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/shape_edit_bg"
            android:hint="@string/input_username"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/ll_send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="5"
                android:background="@drawable/shape_edit_bg"
                android:hint="@string/input_code"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:maxLength="6"/>

            <Button
                android:id="@+id/btn_send_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/shape_login_tv_bg"
                android:text="@string/send_code"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/shape_edit_bg"
            android:hint="@string/input_password"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/shape_login_tv_bg"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_use_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_password_login"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="|"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/gray"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="@string/setting"
        android:textColor="@color/gray"
        android:textSize="16sp" />
</FrameLayout>