<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/register"
            android:textColor="@color/gray"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical"
            android:visibility="visible">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edit_bg"
                android:hint="@string/input_username"
                android:maxLines="1"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/ll_send_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="5"
                    android:background="@drawable/shape_edit_bg"
                    android:hint="@string/input_code"
                    android:maxLength="6"
                    android:paddingStart="15dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/gray"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_send_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/shape_login_tv_bg"
                    android:text="@string/send_code"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_edit_bg"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_edit_bg"
                android:hint="@string/input_password_again"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/gray"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_chose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <FrameLayout
                android:id="@+id/fl_became_enterprise"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/shape_login_tv_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableBottom="@mipmap/ic_enter"
                    android:text="@string/enterprise"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_became_other"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_edit_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/other"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/et_enterprise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/shape_edit_bg"
            android:hint="@string/input_enterprise_name"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_is_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_login_tv_bg"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/tv_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_login_tv_bg"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>